# systems-programming-academy

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  astro.config.mjs  flake.nix  package-lock.json  package.json
.claude/: launch.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  lesson_request.md
.github/workflows/: ci.yml  deploy.yml
examples/app-guestbook-go/: go.mod  guestbook.go  guestbook_test.go
examples/app-guestbook-py/: guestbook_app.py  test_guestbook_app.py
examples/app-guestbook-rust/: Cargo.toml
examples/app-guestbook-rust/src/: lib.rs  main.rs
examples/capstone-guestbook-go/: go.mod  guestbook.go  guestbook_test.go
examples/capstone-guestbook-py/: guestbook.py  test_guestbook.py
examples/capstone-guestbook-rust/: Cargo.toml
examples/capstone-guestbook-rust/src/: lib.rs  main.rs
examples/go-collections/: collections.go  collections_test.go  go.mod
examples/go-concurrency/: concurrency.go  concurrency_test.go  go.mod
examples/go-errors/: go.mod  users.go  users_test.go
examples/go-generics/: generics.go  generics_test.go  go.mod
examples/go-interfaces/: go.mod  shapes.go  shapes_test.go
examples/go-testing/: go.mod  stringutil.go  stringutil_test.go
examples/part2-caching-go/: cache.go  cache_test.go  go.mod
examples/part2-caching-py/: test_ttlcache.py  ttlcache.py
examples/part2-caching-rust/: Cargo.toml
examples/part2-config-go/: config.go  config_test.go  go.mod
examples/part2-config-py/: appconfig.py  test_appconfig.py
examples/part2-config-rust/: Cargo.toml
examples/part2-hexagonal-go/: go.mod  hexagonal.go  hexagonal_test.go
examples/part2-hexagonal-py/: adapters.py  application.py  domain.py  main_app.py  test_hexagonal.py
examples/part2-hexagonal-rust/: Cargo.toml
examples/part2-logging-go/: go.mod  logging.go  logging_test.go
examples/part2-logging-py/: structlog_demo.py  test_structlog_demo.py
examples/part2-logging-rust/: Cargo.toml
examples/part2-pyramid-go/: go.mod  signup.go  signup_test.go
examples/part2-pyramid-py/: signup.py  test_signup.py
examples/part2-pyramid-rust/: Cargo.toml
examples/part2-repository-go/: go.mod  repository.go  repository_test.go
examples/part2-repository-py/: repository.py  test_repository.py
examples/part2-repository-rust/: Cargo.toml
examples/part3-confgen-go/: confgen.go  confgen_test.go  go.mod
examples/part3-confgen-py/: confgen.py  test_confgen.py
examples/part3-confgen-rust/: Cargo.toml
examples/part3-exporter-go/: exporter.go  exporter_test.go  go.mod
examples/part3-exporter-py/: exporter.py  test_exporter.py
examples/part3-exporter-rust/: Cargo.toml
examples/part3-healthcheck-go/: go.mod  healthcheck.go  healthcheck_test.go
examples/part3-healthcheck-py/: healthcheck.py  test_healthcheck.py
examples/part3-healthcheck-rust/: Cargo.toml
examples/part3-loganalyzer-go/: go.mod  loganalyzer.go  loganalyzer_test.go
examples/part3-loganalyzer-py/: loganalyzer.py  test_loganalyzer.py
examples/part3-loganalyzer-rust/: Cargo.toml
examples/part4-async-go/: async.go  async_test.go  go.mod
examples/part4-async-py/: async_demo.py  test_async_demo.py
examples/part4-async-rust/: Cargo.toml
examples/part4-async-rust/src/: lib.rs  main.rs
examples/part4-channels-go/: channels.go  channels_test.go  go.mod
examples/part4-channels-py/: channels_demo.py  test_channels_demo.py
examples/part5-container-rust/: Cargo.toml
examples/part5-container-rust/src/: lib.rs  main.rs
examples/part5-json-go/: go.mod  (+2 more)
examples/part5-json-rust/: Cargo.toml
examples/part5-json-rust/src/: lib.rs  main.rs
examples/part5-querybuilder-rust/: Cargo.toml
examples/part5-querybuilder-rust/src/: lib.rs  main.rs
examples/part5-router-rust/: Cargo.toml
examples/part5-router-rust/src/: lib.rs  main.rs
examples/part5-template-rust/: Cargo.toml
examples/part5-template-rust/src/: lib.rs  main.rs
examples/part5-testkit-rust/: Cargo.toml
examples/part5-testkit-rust/src/: lib.rs  main.rs
examples/part5-validator-rust/: Cargo.toml
examples/part5-validator-rust/src/: lib.rs  main.rs
examples/part6-ebpf-rust/: Cargo.toml
examples/part6-ebpf-rust/src/: lib.rs  main.rs
examples/part6-netdiag-rust/: Cargo.toml
examples/part6-netdiag-rust/src/: lib.rs  main.rs
examples/part6-ping-rust/: Cargo.toml
examples/part6-ping-rust/src/: lib.rs  main.rs
examples/part6-portscan-rust/: Cargo.toml
examples/part6-portscan-rust/src/: lib.rs  main.rs
examples/part6-sysmon-rust/: Cargo.toml
examples/part6-sysmon-rust/src/: lib.rs  main.rs
examples/part6-traceroute-rust/: Cargo.toml
examples/part6-traceroute-rust/src/: lib.rs  main.rs
examples/part7-bool-rust/: Cargo.toml
examples/part7-bool-rust/src/: lib.rs  main.rs
examples/part7-calc-rust/: Cargo.toml
examples/part7-calc-rust/src/: lib.rs  main.rs
examples/part7-cond-rust/: Cargo.toml
examples/part7-cond-rust/src/: lib.rs  main.rs
examples/part7-fns-rust/: Cargo.toml
examples/part7-fns-rust/src/: lib.rs  main.rs
examples/part7-loops-rust/: Cargo.toml
examples/part7-loops-rust/src/: lib.rs  main.rs
examples/part7-vars-rust/: Cargo.toml
examples/part7-vars-rust/src/: lib.rs  main.rs
examples/rust-collections/: Cargo.toml
examples/rust-collections/src/: lib.rs
examples/rust-concurrency/: Cargo.toml
examples/rust-concurrency/src/: lib.rs
examples/rust-error-handling/: Cargo.toml
examples/rust-error-handling/src/: lib.rs  main.rs
examples/rust-generics/: Cargo.toml
examples/rust-generics/src/: lib.rs
examples/rust-ownership/: Cargo.toml
examples/rust-ownership/src/: lib.rs
examples/rust-smart-pointers/: Cargo.toml
examples/rust-smart-pointers/src/: lib.rs
examples/rust-testing/: Cargo.toml
examples/rust-testing/src/: lib.rs
examples/rust-testing/tests/: integration.rs
examples/rust-traits/: Cargo.toml
examples/rust-traits/src/: lib.rs
public/: llms-full.txt  llms.txt
scripts/: run-all.sh
src/: content.config.ts
(+303 files in other folders)
