[package]
name = "app-guestbook-rust"
version = "0.1.0"
edition = "2021"

# Unlike the dependency-free lessons, this running app uses a real SQLite
# engine. rusqlite with the "bundled" feature compiles SQLite from source, so no
# system library is needed — the price of a real database is one dependency.

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }

[[bin]]
name = "guestbook"
path = "src/main.rs"
