[package]
name = "part6-portscan-rust"
version = "0.1.0"
edition = "2021"

# Dependency-free: a TCP connect scanner. The pure parts (port-spec parsing,
# service lookup, table rendering) are tested directly; the scan itself is
# tested against REAL loopback sockets (bind for open, bind-then-close for
# closed) — no privileges, unlike a raw-socket SYN scan.

[[bin]]
name = "portscan"
path = "src/main.rs"
