[package]
name = "part6-sysmon-rust"
version = "0.1.0"
edition = "2021"

# Dependency-free: the dashboard reads Linux /proc files (plain text), computes
# metrics, and renders an ANSI "heat" frame. Parsing and rendering are pure
# functions over strings, so the whole thing is testable with fixtures — no
# privileges, no live /proc needed for the tests.

[[bin]]
name = "sysmon"
path = "src/main.rs"
