[package]
name = "part7-loops-rust"
version = "0.1.0"
edition = "2021"

# Dependency-free: the interpreter becomes imperative — statements separated by
# `;`, `{ }` blocks, a `print` statement for output, and a `while` loop. Programs
# now *do* something (produce output) and *iterate*, not just return one value.

[[bin]]
name = "loops"
path = "src/main.rs"

[lib]
path = "src/lib.rs"
