[package]
name = "generics"
version = "0.1.0"
edition = "2021"
description = "Executable, tested companion code for the Academy lesson: Generics & Lifetimes."
authors = ["Walter Angolar"]
license = "MIT"

# Dependency-free: `cargo test` runs all unit tests offline on stable.

[lib]
path = "src/lib.rs"
