[package]
name = "ownership"
version = "0.1.0"
edition = "2021"
description = "Executable, tested companion code for the Academy lesson: Ownership & the Borrow Checker."
authors = ["Walter Angolar"]
license = "MIT"

# Dependency-free on purpose: the lesson's code must compile and test offline
# on a stable toolchain with `cargo test` and `cargo run --bin bench`.

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = 3
